--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
-        "razorpay/razorpay": "^2.8",
-        "stripe/stripe-php": "^10.15"
+        "razorpay/razorpay": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
